[project]
name = "short"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=26.1.0",
    "datetime>=6.0",
    "fastapi>=0.133.1",
    "httpx>=0.28.1",
    "logger>=1.4",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.47",
    "uvicorn>=0.41.0",
    "validators>=0.35.0",
]
